<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".widget.WidgetConfig">

    <TextView
        android:id="@+id/tvRadioWidget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:text="@string/unit"
        android:textColor="@color/cold_gray"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroupWidget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="fill_horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvRadio">

        <RadioButton
            android:id="@+id/radioMetricWidget"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:buttonTint="@color/tint_secondary"
            android:checked="true"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/metric"
            android:textColor="@color/dark"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/radioImperialWidget"
            style="@style/BodyDarkLeft"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:buttonTint="@color/tint_secondary"
            android:checked="false"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/imperial"
            android:textColor="@color/dark"
            android:textSize="14sp" />
    </RadioGroup>

    <Button
        android:id="@+id/btnSetUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/tint_secondary"
        android:clickable="false"
        android:onClick="confirmConfig"
        android:text="@string/addFruit"
        android:textColor="@color/white" />


</LinearLayout>